instnace remove api add
